# analyse_spotify_playlist

./: .gitignore  LICENSE  README.md  pyproject.toml
analyse_spotify_playlist/: __main__.py  access_token.py  analyse.py  analyse_spotify_playlist.py  config.py  file_output.py  logger.py  outbound_requests.py  playlist.py  track.py  utils.py
docs/: Today’s_Top_Hits_analysis.txt
scripts/: test.sh
src/: analyse.py  main.py  outbound_requests.py  playlist.py  track.py
test/: mock_data.py  test_outbound_requests.py  test_playlist.py  test_track.py
