[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analyse-spotify-playlist"
version = "0.0.1"
dependencies = [
 "requests==2.32.3"
]
requires-python = ">= 3.8"
authors = [
    {name="Matthew Tully", email="tully_m@hotmail.co.uk"},
]
maintainers = [
  {name="Matthew Tully", email="tully_m@hotmail.co.uk"},
]
description = "Analyse a spotify playlist. Results can be printed to command line, or output as a file. Use --help for more details."
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
include = ["analyse-spotify-playlist"]